# Checkers

./: CMakeLists.txt  README.md
include/: VAO.h  buffer.h  camera2D.h  checker.h  desk.h  input.h  mesh.h  mesh2D.h  model.h  shader.h  texture.h  window.h
resource/shaders/: default.frag  default.vert
src/: VAO.cpp  buffer.cpp  camera2D.cpp  input.cpp  main.cpp  mesh.cpp  mesh2D.cpp  model.cpp  shader.cpp  texture.cpp  window.cpp
